--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   }
   
   nav li {
-    margin-right: 40px;
+    margin-right: 50px;
   }
   
   nav a {
@@ -118,8 +118,8 @@ body {
   }
 
   .gallery img[alt="paginas"] {
-    max-width: 50%;
-    margin-left: 26%;
+    max-width: auto;
+    margin-left: auto;
     margin-right: auto;
   }
 
