--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
   }
 
   .gallery img[alt="paginas"] {
-    max-width: auto;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
   }
